--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "firebase": "^9.0.2",
+    "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
+    "sweetalert": "^2.1.2",
+    "sweetalert-react": "^0.4.11",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
